parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ILLEGAL

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements statement
Rule 3     statement -> create_database
Rule 4     statement -> drop_database
Rule 5     statement -> alter_database
Rule 6     statement -> create_table
Rule 7     statement -> insert_into
Rule 8     statement -> select_from
Rule 9     create_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
Rule 10    drop_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
Rule 11    alter_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
Rule 12    create_table -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_definitions RPAREN SEMICOLON
Rule 13    column_definitions -> column_definition
Rule 14    column_definitions -> column_definitions COMMA column_definition
Rule 15    column_definition -> IDENTIFIER column_type
Rule 16    column_definition -> IDENTIFIER column_type SQL_KEYWORD
Rule 17    column_type -> INT
Rule 18    column_type -> VARCHAR LPAREN NUMBER RPAREN
Rule 19    column_type -> SQL_KEYWORD
Rule 20    insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON
Rule 21    column_list -> IDENTIFIER
Rule 22    column_list -> column_list COMMA IDENTIFIER
Rule 23    value_list -> value
Rule 24    value_list -> value_list COMMA value
Rule 25    value -> STRING
Rule 26    value -> NUMBER
Rule 27    select_from -> SQL_KEYWORD SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON

Terminals, with rules where they appear

COMMA                : 14 22 24
IDENTIFIER           : 9 10 11 11 12 15 16 20 21 22 27
ILLEGAL              : 
INT                  : 17
LPAREN               : 12 18 20 20
NUMBER               : 18 26
RPAREN               : 12 18 20 20
SEMICOLON            : 9 10 11 12 20 27
SQL_KEYWORD          : 9 9 10 10 11 11 11 11 12 12 16 19 20 20 20 27 27 27
STRING               : 25
VARCHAR              : 18
error                : 

Nonterminals, with rules where they appear

alter_database       : 5
column_definition    : 13 14
column_definitions   : 12 14
column_list          : 20 22
column_type          : 15 16
create_database      : 3
create_table         : 6
drop_database        : 4
insert_into          : 7
select_from          : 8
statement            : 1 2
statements           : 2 0
value                : 23 24
value_list           : 20 24

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements statement
    (3) statement -> . create_database
    (4) statement -> . drop_database
    (5) statement -> . alter_database
    (6) statement -> . create_table
    (7) statement -> . insert_into
    (8) statement -> . select_from
    (9) create_database -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
    (10) drop_database -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
    (11) alter_database -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
    (12) create_table -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_definitions RPAREN SEMICOLON
    (20) insert_into -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON
    (27) select_from -> . SQL_KEYWORD SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON

    SQL_KEYWORD     shift and go to state 9

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    create_database                shift and go to state 3
    drop_database                  shift and go to state 4
    alter_database                 shift and go to state 5
    create_table                   shift and go to state 6
    insert_into                    shift and go to state 7
    select_from                    shift and go to state 8

state 1

    (0) S' -> statements .
    (2) statements -> statements . statement
    (3) statement -> . create_database
    (4) statement -> . drop_database
    (5) statement -> . alter_database
    (6) statement -> . create_table
    (7) statement -> . insert_into
    (8) statement -> . select_from
    (9) create_database -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
    (10) drop_database -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
    (11) alter_database -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
    (12) create_table -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_definitions RPAREN SEMICOLON
    (20) insert_into -> . SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON
    (27) select_from -> . SQL_KEYWORD SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON

    SQL_KEYWORD     shift and go to state 9

    statement                      shift and go to state 10
    create_database                shift and go to state 3
    drop_database                  shift and go to state 4
    alter_database                 shift and go to state 5
    create_table                   shift and go to state 6
    insert_into                    shift and go to state 7
    select_from                    shift and go to state 8

state 2

    (1) statements -> statement .

    SQL_KEYWORD     reduce using rule 1 (statements -> statement .)
    $end            reduce using rule 1 (statements -> statement .)


state 3

    (3) statement -> create_database .

    SQL_KEYWORD     reduce using rule 3 (statement -> create_database .)
    $end            reduce using rule 3 (statement -> create_database .)


state 4

    (4) statement -> drop_database .

    SQL_KEYWORD     reduce using rule 4 (statement -> drop_database .)
    $end            reduce using rule 4 (statement -> drop_database .)


state 5

    (5) statement -> alter_database .

    SQL_KEYWORD     reduce using rule 5 (statement -> alter_database .)
    $end            reduce using rule 5 (statement -> alter_database .)


state 6

    (6) statement -> create_table .

    SQL_KEYWORD     reduce using rule 6 (statement -> create_table .)
    $end            reduce using rule 6 (statement -> create_table .)


state 7

    (7) statement -> insert_into .

    SQL_KEYWORD     reduce using rule 7 (statement -> insert_into .)
    $end            reduce using rule 7 (statement -> insert_into .)


state 8

    (8) statement -> select_from .

    SQL_KEYWORD     reduce using rule 8 (statement -> select_from .)
    $end            reduce using rule 8 (statement -> select_from .)


state 9

    (9) create_database -> SQL_KEYWORD . SQL_KEYWORD IDENTIFIER SEMICOLON
    (10) drop_database -> SQL_KEYWORD . SQL_KEYWORD IDENTIFIER SEMICOLON
    (11) alter_database -> SQL_KEYWORD . SQL_KEYWORD IDENTIFIER SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
    (12) create_table -> SQL_KEYWORD . SQL_KEYWORD IDENTIFIER LPAREN column_definitions RPAREN SEMICOLON
    (20) insert_into -> SQL_KEYWORD . SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON
    (27) select_from -> SQL_KEYWORD . SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON

    SQL_KEYWORD     shift and go to state 11


state 10

    (2) statements -> statements statement .

    SQL_KEYWORD     reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)


state 11

    (9) create_database -> SQL_KEYWORD SQL_KEYWORD . IDENTIFIER SEMICOLON
    (10) drop_database -> SQL_KEYWORD SQL_KEYWORD . IDENTIFIER SEMICOLON
    (11) alter_database -> SQL_KEYWORD SQL_KEYWORD . IDENTIFIER SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
    (12) create_table -> SQL_KEYWORD SQL_KEYWORD . IDENTIFIER LPAREN column_definitions RPAREN SEMICOLON
    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD . IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON
    (27) select_from -> SQL_KEYWORD SQL_KEYWORD . SQL_KEYWORD IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 13
    SQL_KEYWORD     shift and go to state 12


state 12

    (27) select_from -> SQL_KEYWORD SQL_KEYWORD SQL_KEYWORD . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 14


state 13

    (9) create_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER . SEMICOLON
    (10) drop_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER . SEMICOLON
    (11) alter_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER . SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON
    (12) create_table -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER . LPAREN column_definitions RPAREN SEMICOLON
    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER . LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON

    SEMICOLON       shift and go to state 16
    SQL_KEYWORD     shift and go to state 15
    LPAREN          shift and go to state 17


state 14

    (27) select_from -> SQL_KEYWORD SQL_KEYWORD SQL_KEYWORD IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 18


state 15

    (11) alter_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SQL_KEYWORD . SQL_KEYWORD IDENTIFIER SEMICOLON

    SQL_KEYWORD     shift and go to state 19


state 16

    (9) create_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .
    (10) drop_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .

  ! reduce/reduce conflict for SQL_KEYWORD resolved using rule 9 (create_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .)
  ! reduce/reduce conflict for $end resolved using rule 9 (create_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .)
    SQL_KEYWORD     reduce using rule 9 (create_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .)
    $end            reduce using rule 9 (create_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .)

  ! SQL_KEYWORD     [ reduce using rule 10 (drop_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .) ]
  ! $end            [ reduce using rule 10 (drop_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .) ]


state 17

    (12) create_table -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN . column_definitions RPAREN SEMICOLON
    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN . column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON
    (13) column_definitions -> . column_definition
    (14) column_definitions -> . column_definitions COMMA column_definition
    (21) column_list -> . IDENTIFIER
    (22) column_list -> . column_list COMMA IDENTIFIER
    (15) column_definition -> . IDENTIFIER column_type
    (16) column_definition -> . IDENTIFIER column_type SQL_KEYWORD

    IDENTIFIER      shift and go to state 20

    column_definitions             shift and go to state 21
    column_list                    shift and go to state 22
    column_definition              shift and go to state 23

state 18

    (27) select_from -> SQL_KEYWORD SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .

    SQL_KEYWORD     reduce using rule 27 (select_from -> SQL_KEYWORD SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .)
    $end            reduce using rule 27 (select_from -> SQL_KEYWORD SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .)


state 19

    (11) alter_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SQL_KEYWORD SQL_KEYWORD . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 24


state 20

    (21) column_list -> IDENTIFIER .
    (15) column_definition -> IDENTIFIER . column_type
    (16) column_definition -> IDENTIFIER . column_type SQL_KEYWORD
    (17) column_type -> . INT
    (18) column_type -> . VARCHAR LPAREN NUMBER RPAREN
    (19) column_type -> . SQL_KEYWORD

    RPAREN          reduce using rule 21 (column_list -> IDENTIFIER .)
    COMMA           reduce using rule 21 (column_list -> IDENTIFIER .)
    INT             shift and go to state 27
    VARCHAR         shift and go to state 28
    SQL_KEYWORD     shift and go to state 26

    column_type                    shift and go to state 25

state 21

    (12) create_table -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_definitions . RPAREN SEMICOLON
    (14) column_definitions -> column_definitions . COMMA column_definition

    RPAREN          shift and go to state 29
    COMMA           shift and go to state 30


state 22

    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list . RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON
    (22) column_list -> column_list . COMMA IDENTIFIER

    RPAREN          shift and go to state 31
    COMMA           shift and go to state 32


state 23

    (13) column_definitions -> column_definition .

    RPAREN          reduce using rule 13 (column_definitions -> column_definition .)
    COMMA           reduce using rule 13 (column_definitions -> column_definition .)


state 24

    (11) alter_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SQL_KEYWORD SQL_KEYWORD IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 33


state 25

    (15) column_definition -> IDENTIFIER column_type .
    (16) column_definition -> IDENTIFIER column_type . SQL_KEYWORD

    RPAREN          reduce using rule 15 (column_definition -> IDENTIFIER column_type .)
    COMMA           reduce using rule 15 (column_definition -> IDENTIFIER column_type .)
    SQL_KEYWORD     shift and go to state 34


state 26

    (19) column_type -> SQL_KEYWORD .

    SQL_KEYWORD     reduce using rule 19 (column_type -> SQL_KEYWORD .)
    RPAREN          reduce using rule 19 (column_type -> SQL_KEYWORD .)
    COMMA           reduce using rule 19 (column_type -> SQL_KEYWORD .)


state 27

    (17) column_type -> INT .

    SQL_KEYWORD     reduce using rule 17 (column_type -> INT .)
    RPAREN          reduce using rule 17 (column_type -> INT .)
    COMMA           reduce using rule 17 (column_type -> INT .)


state 28

    (18) column_type -> VARCHAR . LPAREN NUMBER RPAREN

    LPAREN          shift and go to state 35


state 29

    (12) create_table -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_definitions RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 36


state 30

    (14) column_definitions -> column_definitions COMMA . column_definition
    (15) column_definition -> . IDENTIFIER column_type
    (16) column_definition -> . IDENTIFIER column_type SQL_KEYWORD

    IDENTIFIER      shift and go to state 38

    column_definition              shift and go to state 37

state 31

    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN . SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON

    SQL_KEYWORD     shift and go to state 39


state 32

    (22) column_list -> column_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 40


state 33

    (11) alter_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .

    SQL_KEYWORD     reduce using rule 11 (alter_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .)
    $end            reduce using rule 11 (alter_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON .)


state 34

    (16) column_definition -> IDENTIFIER column_type SQL_KEYWORD .

    RPAREN          reduce using rule 16 (column_definition -> IDENTIFIER column_type SQL_KEYWORD .)
    COMMA           reduce using rule 16 (column_definition -> IDENTIFIER column_type SQL_KEYWORD .)


state 35

    (18) column_type -> VARCHAR LPAREN . NUMBER RPAREN

    NUMBER          shift and go to state 41


state 36

    (12) create_table -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_definitions RPAREN SEMICOLON .

    SQL_KEYWORD     reduce using rule 12 (create_table -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_definitions RPAREN SEMICOLON .)
    $end            reduce using rule 12 (create_table -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_definitions RPAREN SEMICOLON .)


state 37

    (14) column_definitions -> column_definitions COMMA column_definition .

    RPAREN          reduce using rule 14 (column_definitions -> column_definitions COMMA column_definition .)
    COMMA           reduce using rule 14 (column_definitions -> column_definitions COMMA column_definition .)


state 38

    (15) column_definition -> IDENTIFIER . column_type
    (16) column_definition -> IDENTIFIER . column_type SQL_KEYWORD
    (17) column_type -> . INT
    (18) column_type -> . VARCHAR LPAREN NUMBER RPAREN
    (19) column_type -> . SQL_KEYWORD

    INT             shift and go to state 27
    VARCHAR         shift and go to state 28
    SQL_KEYWORD     shift and go to state 26

    column_type                    shift and go to state 25

state 39

    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD . LPAREN value_list RPAREN SEMICOLON

    LPAREN          shift and go to state 42


state 40

    (22) column_list -> column_list COMMA IDENTIFIER .

    RPAREN          reduce using rule 22 (column_list -> column_list COMMA IDENTIFIER .)
    COMMA           reduce using rule 22 (column_list -> column_list COMMA IDENTIFIER .)


state 41

    (18) column_type -> VARCHAR LPAREN NUMBER . RPAREN

    RPAREN          shift and go to state 43


state 42

    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN . value_list RPAREN SEMICOLON
    (23) value_list -> . value
    (24) value_list -> . value_list COMMA value
    (25) value -> . STRING
    (26) value -> . NUMBER

    STRING          shift and go to state 46
    NUMBER          shift and go to state 47

    value_list                     shift and go to state 44
    value                          shift and go to state 45

state 43

    (18) column_type -> VARCHAR LPAREN NUMBER RPAREN .

    SQL_KEYWORD     reduce using rule 18 (column_type -> VARCHAR LPAREN NUMBER RPAREN .)
    RPAREN          reduce using rule 18 (column_type -> VARCHAR LPAREN NUMBER RPAREN .)
    COMMA           reduce using rule 18 (column_type -> VARCHAR LPAREN NUMBER RPAREN .)


state 44

    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list . RPAREN SEMICOLON
    (24) value_list -> value_list . COMMA value

    RPAREN          shift and go to state 48
    COMMA           shift and go to state 49


state 45

    (23) value_list -> value .

    RPAREN          reduce using rule 23 (value_list -> value .)
    COMMA           reduce using rule 23 (value_list -> value .)


state 46

    (25) value -> STRING .

    RPAREN          reduce using rule 25 (value -> STRING .)
    COMMA           reduce using rule 25 (value -> STRING .)


state 47

    (26) value -> NUMBER .

    RPAREN          reduce using rule 26 (value -> NUMBER .)
    COMMA           reduce using rule 26 (value -> NUMBER .)


state 48

    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 50


state 49

    (24) value_list -> value_list COMMA . value
    (25) value -> . STRING
    (26) value -> . NUMBER

    STRING          shift and go to state 46
    NUMBER          shift and go to state 47

    value                          shift and go to state 51

state 50

    (20) insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON .

    SQL_KEYWORD     reduce using rule 20 (insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON .)
    $end            reduce using rule 20 (insert_into -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER LPAREN column_list RPAREN SQL_KEYWORD LPAREN value_list RPAREN SEMICOLON .)


state 51

    (24) value_list -> value_list COMMA value .

    RPAREN          reduce using rule 24 (value_list -> value_list COMMA value .)
    COMMA           reduce using rule 24 (value_list -> value_list COMMA value .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 16 resolved using rule (create_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON)
WARNING: rejected rule (drop_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON) in state 16
WARNING: Rule (drop_database -> SQL_KEYWORD SQL_KEYWORD IDENTIFIER SEMICOLON) is never reduced
